# str2port

./: README.md  pyproject.toml
dev/: get_common_ports.py
str2port/: __init__.py  __main__.py  common.py  core.py  iana.csv
